cluster-apps/rancher/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: cattle-system
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    customResponseHeaders:
      Referrer-Policy: "strict-origin-when-cross-origin"
      X-Permitted-Cross-Domain-Policies: "none"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: cattle-system
spec:
  rateLimit:
    average: 50   # average requests per second
    burst: 100     # maximum burst
    period: 1m
    sourceCriterion:
      requestHost: false
