cluster-apps/rancher/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.<your-domain>`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      middlewares:
        - name: default-headers
        - name: ratelimit
    - match: Host(`rancher.<your-domain>`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      middlewares:
        - name: default-headers
        - name: ratelimit
  tls:
    secretName: default-cert-production-tls
